force-app/main/default/objects/ServiceAppointment/fields/Commentaires__c.field-meta.xml
<CustomField>
    <fullName>Commentaires__c</fullName>
    <label>Commentaires</label>
    <type>TextArea</type>
</CustomField>