force-app/main/default/objects/ServiceAppointment/fields/FSL__InJeopardyReason__c.field-meta.xml
<CustomField>
    <fullName>FSL__InJeopardyReason__c</fullName>
    <label>In Jeopardy Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Départ retardé</fullName>
            </value>
            <value>
                <fullName>Fin retardée</fullName>
            </value>
            <value>
                <fullName>Pas de réponse du client</fullName>
            </value>
            <value>
                <fullName>Date d&apos;échéance proche</fullName>
            </value>
            <value>
                <fullName>Delayed Finish</fullName>
                <isActive>false</isActive>
                <label>Delayed Finish</label>
            </value>
            <value>
                <fullName>Delayed Start</fullName>
                <isActive>false</isActive>
                <label>Delayed Start</label>
            </value>
            <value>
                <fullName>Due Date Approaching</fullName>
                <isActive>false</isActive>
                <label>Due Date Approaching</label>
            </value>
            <value>
                <fullName>No Response</fullName>
                <isActive>false</isActive>
                <label>No Response</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>