force-app/main/default/objects/ServiceAppointment/fields/Intervention__c.field-meta.xml
<CustomField>
    <fullName>Intervention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ce champ permet de pouvoir ensuite faire le lien entre l&apos;adresse du SA et du WO</description>
    <label>Tech_Intervention</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Rendez-vous de service</relationshipLabel>
    <relationshipName>Rendez_vous_de_service</relationshipName>
    <type>Lookup</type>
</CustomField>