force-app/main/default/objects/ServiceAppointment/fields/Numero_Contrat__c.field-meta.xml
<CustomField>
    <fullName>Numero_Contrat__c</fullName>
    <formula>Intervention__r.MaintenancePlan.ServiceContract.SC_NumeroDuContrat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro Contrat</label>
    <type>Text</type>
</CustomField>