force-app/main/default/objects/ServiceAppointment/fields/Numero_de_commande_ERP__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_commande_ERP__c</fullName>
    <formula>Intervention__r.FSL_WO_Commande__r.ORD_ReferenceCommande__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro de commande ERP</label>
    <type>Text</type>
</CustomField>