force-app/main/default/objects/ServiceAppointment/fields/OperatingHours__c.field-meta.xml
<CustomField>
    <fullName>OperatingHours__c</fullName>
    <formula>ServiceTerritory.OperatingHours.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OperatingHours</label>
    <type>Text</type>
</CustomField>