force-app/main/default/objects/ServiceAppointment/fields/SA_Commande__c.field-meta.xml
<CustomField>
    <fullName>SA_Commande__c</fullName>
    <label>Commande</label>
    <length>25</length>
    <type>Text</type>
</CustomField>