force-app/main/default/objects/ServiceAppointment/fields/SA_ContratDassistanceTechnique__c.field-meta.xml
<CustomField>
    <fullName>SA_ContratDassistanceTechnique__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrat d&apos;assistance technique</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Rendez-vous de service</relationshipLabel>
    <relationshipName>Rendez_vous_de_service</relationshipName>
    <type>Lookup</type>
</CustomField>