force-app/main/default/objects/ServiceAppointment/fields/SA_Date_de_maintenance_Suggeree__c.field-meta.xml
<CustomField>
    <fullName>SA_Date_de_maintenance_Suggeree__c</fullName>
    <formula>Intervention__r.SuggestedMaintenanceDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de maintenance Suggérée</label>
    <type>Date</type>
</CustomField>