force-app/main/default/objects/ServiceAppointment/fields/SA_Duree_reelle_en_heure__c.field-meta.xml
<CustomField>
    <fullName>SA_Duree_reelle_en_heure__c</fullName>
    <formula>MOD( (ActualEndTime -  ActualStartTime ) * 24, 24 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée réelle (en heure)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>