force-app/main/default/objects/ServiceAppointment/fields/SA_Intervention__c.field-meta.xml
<CustomField>
    <fullName>SA_Intervention__c</fullName>
    <formula>Intervention__r.WorkOrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intervention</label>
    <type>Text</type>
</CustomField>