force-app/main/default/objects/ServiceAppointment/fields/SA_Intervention_refuse_cause_COVID19__c.field-meta.xml
<CustomField>
    <fullName>SA_Intervention_refuse_cause_COVID19__c</fullName>
    <defaultValue>false</defaultValue>
    <description>L&apos;intervention a été refusée par le client à cause des mesures sanitaires liées au COVID19</description>
    <inlineHelpText>Cocher cette case si l&apos;intervention a été refusée par le client à cause des mesures sanitaires liées au COVID19</inlineHelpText>
    <label>Intervention refusée cause COVID19</label>
    <type>Checkbox</type>
</CustomField>