force-app/main/default/objects/ServiceAppointment/fields/SA_KilometragesParcourus__c.field-meta.xml
<CustomField>
    <fullName>SA_KilometragesParcourus__c</fullName>
    <label>Kilométrages parcourus</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>