force-app/main/default/objects/ServiceAppointment/fields/SA_MotifDeRejet__c.field-meta.xml
<CustomField>
    <fullName>SA_MotifDeRejet__c</fullName>
    <description>Préciser le motif lors du rejet ou de l&apos;impossibilité de terminer un rendez-vous de service</description>
    <label>Motif de rejet</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non disponible</fullName>
            </value>
            <value>
                <fullName>Absence de pièces</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>