force-app/main/default/objects/ServiceAppointment/fields/SA_Numero_de_CAT_ERP__c.field-meta.xml
<CustomField>
    <fullName>SA_Numero_de_CAT_ERP__c</fullName>
    <formula>Intervention__r.WO_Numero_de_contrat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro de CAT ERP</label>
    <type>Text</type>
</CustomField>