force-app/main/default/objects/ServiceAppointment/fields/SA_RessourceDeService__c.field-meta.xml
<CustomField>
    <fullName>SA_RessourceDeService__c</fullName>
    <formula>Intervention__r.Account.RessourceAttribuee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ressource de service</label>
    <type>Text</type>
</CustomField>