force-app/main/default/objects/ServiceAppointment/fields/SA_Retour_domicile__c.field-meta.xml
<CustomField>
    <fullName>SA_Retour_domicile__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Ce champ indique que le technicien rentre chez lui tous les soirs en cas d&apos;intervention Multidays</description>
    <inlineHelpText>Ce champ indique que le technicien rentre chez lui tous les soirs en cas d&apos;intervention Multidays. 
Si ce champ est décoché/coché, la fin planifiée sera recalculée.</inlineHelpText>
    <label>Retour domicile</label>
    <type>Checkbox</type>
</CustomField>