force-app/main/default/objects/ServiceAppointment/fields/SA_SoumettreLesFrais__c.field-meta.xml
<CustomField>
    <fullName>SA_SoumettreLesFrais__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Soumettre les frais</label>
    <type>Checkbox</type>
</CustomField>