force-app/main/default/objects/ServiceAppointment/fields/SA_SoumettreLesTemps__c.field-meta.xml
<CustomField>
    <fullName>SA_SoumettreLesTemps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Soumettre les temps</label>
    <type>Checkbox</type>
</CustomField>