force-app/main/default/objects/ServiceAppointment/fields/SA_TECH_NumeroTypeDeTravail__c.field-meta.xml
<CustomField>
    <fullName>SA_TECH_NumeroTypeDeTravail__c</fullName>
    <formula>Intervention__r.WorkType.WT_NumeroDuTypeDeTravail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_NumeroTypeDeTravail</label>
    <type>Text</type>
</CustomField>