force-app/main/default/objects/ServiceAppointment/fields/SA_TECH_WorkTypeName__c.field-meta.xml
<CustomField>
    <fullName>SA_TECH_WorkTypeName__c</fullName>
    <formula>Intervention__r.WorkType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_WorkTypeName</label>
    <type>Text</type>
</CustomField>