force-app/main/default/objects/ServiceAppointment/fields/SA_TypeDeTravail__c.field-meta.xml
<CustomField>
    <fullName>SA_TypeDeTravail__c</fullName>
    <description>Ne pas supprimer ce champ de type liste de sélection, champ mis à jour par process builder pour permettre l&apos;affichage d&apos;une palette dans le GANTT selon le type de travail de l&apos;intervention.</description>
    <label>Tech_TypeDeTravail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accueil sécurité du site client</fullName>
            </value>
            <value>
                <fullName>Agence, réunions, heures improductives</fullName>
            </value>
            <value>
                <fullName>Audit chaufferie</fullName>
            </value>
            <value>
                <fullName>Courtoisie</fullName>
            </value>
            <value>
                <fullName>Délégation</fullName>
            </value>
            <value>
                <fullName>Demie régie jour</fullName>
            </value>
            <value>
                <fullName>Entretien individuel</fullName>
            </value>
            <value>
                <fullName>Entretien véhicule</fullName>
            </value>
            <value>
                <fullName>Formation client 1 jour</fullName>
            </value>
            <value>
                <fullName>Formation interne BW (animateur)</fullName>
            </value>
            <value>
                <fullName>Formation tutorale</fullName>
            </value>
            <value>
                <fullName>Garantie</fullName>
            </value>
            <value>
                <fullName>Habilitation, Formation interne BW (stagiaire)</fullName>
            </value>
            <value>
                <fullName>Mise au point</fullName>
            </value>
            <value>
                <fullName>Mise en service chaudière eau chaude</fullName>
            </value>
            <value>
                <fullName>Mise en service chaudière eau chaude Standard</fullName>
            </value>
            <value>
                <fullName>Mise en service chaudière instantanée</fullName>
            </value>
            <value>
                <fullName>Mise en service chaudière TF</fullName>
            </value>
            <value>
                <fullName>Mise en service chaudière TF Standard</fullName>
            </value>
            <value>
                <fullName>Mise en service fluide thermique</fullName>
            </value>
            <value>
                <fullName>Mise en service fluide thermique Standard</fullName>
            </value>
            <value>
                <fullName>Mise en service location Standard</fullName>
            </value>
            <value>
                <fullName>Mise en service traitement air</fullName>
            </value>
            <value>
                <fullName>Mise en service traitement air Standard</fullName>
            </value>
            <value>
                <fullName>Mise en service traitement d&apos;eau</fullName>
            </value>
            <value>
                <fullName>Mise en service traitement d&apos;eau standard</fullName>
            </value>
            <value>
                <fullName>Mise en service vapeur instantanée Standard</fullName>
            </value>
            <value>
                <fullName>Plan de prévention</fullName>
            </value>
            <value>
                <fullName>Prestation forfait gros travaux</fullName>
            </value>
            <value>
                <fullName>Prestation forfait petit travaux</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>