force-app/main/default/objects/ServiceAppointment/fields/SA_ValidationFraisBackOffice__c.field-meta.xml
<CustomField>
    <fullName>SA_ValidationFraisBackOffice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation Frais Back Office</label>
    <type>Checkbox</type>
</CustomField>