force-app/main/default/objects/ServiceAppointment/fields/SA_ValidationTempsBackOffice__c.field-meta.xml
<CustomField>
    <fullName>SA_ValidationTempsBackOffice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation Temps Back Office</label>
    <type>Checkbox</type>
</CustomField>