force-app/main/default/objects/ServiceAppointment/fields/SAPP_Commande__c.field-meta.xml
<CustomField>
    <fullName>SAPP_Commande__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commande</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>