force-app/main/default/objects/ServiceAppointment/fields/Tech_DonneeAffaireRenseignee__c.field-meta.xml
<CustomField>
    <fullName>Tech_DonneeAffaireRenseignee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ce champ permet de signaler si un numéro d&apos;affaire en lié à l&apos;intervention.</description>
    <label>Tech_DonneeAffaireRenseignee</label>
    <type>Checkbox</type>
</CustomField>