force-app/main/default/objects/ServiceAppointment/fields/tech_report1__c.field-meta.xml
<CustomField>
    <fullName>tech_report1__c</fullName>
    <description>Champ permettant de de regrouper les SA en fonction de leur statut</description>
    <formula>IF( or(ISPICKVAL(Status  , &apos;En cours&apos;),ISPICKVAL(Status  , &apos;Impossible de terminer&apos;),ISPICKVAL(Status  , &apos;Terminé&apos;)  ) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA_Tech_Report1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>