force-app/main/default/objects/ServiceAppointment/fields/Tech_UserAgent__c.field-meta.xml
<CustomField>
    <fullName>Tech_UserAgent__c</fullName>
    <formula>$Api.Session_ID</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_UserAgent</label>
    <type>Text</type>
</CustomField>