force-app/main/default/objects/ServiceAppointment/validationRules/VR01_SA_NumAffaireObligatoireSAPlanifie.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_SA_NumAffaireObligatoireSAPlanifie</fullName>
    <active>false</active>
    <description>Cette règle de validation interdit la mise à jour du champ &quot;Statut&quot; vers la valeur &quot;Planifié&quot;, si le champ &quot;N° d&apos;affaire&quot; du Rendez-vous de service n&apos;est pas renseigné.</description>
    <errorConditionFormula>AND (
(ISBLANK(NumdAffaire__c )),
(ISPICKVAL(Status,&quot;Planifié&quot;)),
$User.USER_ByPassRegleValidation__c = FALSE		
	)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Le numéro d&apos;affaire de l&apos;intervention correspondante doit être renseigné.</errorMessage>
</ValidationRule>