force-app/main/default/objects/ServiceAppointment/listViews/All_ServiceAppointments.listView-meta.xml
<ListView>
    <fullName>All_ServiceAppointments</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>Subject</columns>
    <columns>ZIP</columns>
    <columns>LatestEndTime</columns>
    <columns>SchedStartTime</columns>
    <columns>ActualStartTime</columns>
    <columns>EstDuration</columns>
    <columns>WorkType</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les rendez-vous de service</label>
</ListView>