force-app/main/default/objects/ServiceAppointment/listViews/FieldServiceMobile.listView-meta.xml
<ListView>
    <fullName>FieldServiceMobile</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>Subject</columns>
    <columns>ZIP</columns>
    <columns>LatestEndTime</columns>
    <columns>SchedStartTime</columns>
    <columns>ActualStartTime</columns>
    <columns>EstDuration</columns>
    <filterScope>Mine</filterScope>
    <label>Field Service Mobile</label>
</ListView>