force-app/main/default/objects/ServiceAppointment/listViews/Rendez_vous_de_service_termin_s.listView-meta.xml
<ListView>
    <fullName>Rendez_vous_de_service_termin_s</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>Subject</columns>
    <columns>ZIP</columns>
    <columns>LatestEndTime</columns>
    <columns>SchedStartTime</columns>
    <columns>ActualStartTime</columns>
    <columns>EstDuration</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Terminé</value>
    </filters>
    <label>Rendez-vous de service terminés</label>
</ListView>