force-app/main/default/objects/ServiceAppointment/listViews/Tous_les_rendez_vous_pingl_s.listView-meta.xml
<ListView>
    <fullName>Tous_les_rendez_vous_pingl_s</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>Subject</columns>
    <columns>ZIP</columns>
    <columns>LatestEndTime</columns>
    <columns>SchedStartTime</columns>
    <columns>ActualStartTime</columns>
    <columns>EstDuration</columns>
    <columns>FSL__Pinned__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FSL__Pinned__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Tous les rendez vous épinglés</label>
</ListView>